[package]
name         = "chainpulse"
version      = "0.1.1"
edition      = "2021"
license      = "Apache-2.0"
description  = "Chainpulse is a monitoring tool for IBC relayers"
repository   = "https://github.com/informalsystems/chainpulse"

[profile.release]
lto = true

[dependencies]
axum               = "0.6"
clap               = { version = "4.3", features = ["derive"] }
futures            = "0.3"
ibc-proto          = { version = "0.31.0-alpha.2", default-features = false }
moka               = "0.11"
prometheus         = "0.13"
prost              = "0.11"
serde_json         = "1"
sqlx               = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "json", "time"] }
subtle-encoding    = "0.5"
tendermint         = "0.32"
tendermint-proto   = "0.32"
tendermint-rpc     = { version = "0.32", features = ["websocket-client"] }
thiserror          = "1"
time               = "0.3"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
