[package]
name         = "chainpulse"
version      = "0.4.0-pre"
edition      = "2021"
license      = "Apache-2.0"
description  = "Chainpulse is a monitoring tool for IBC relayers"
repository   = "https://github.com/informalsystems/chainpulse"

[profile.release]
lto = 'thin'

[dependencies]
axum               = "0.6"
clap               = { version = "4.4", features = ["derive"] }
ctrlc              = { version = "3.4", features = ["termination"] }
futures            = "0.3"
ibc-proto          = { version = "0.34.1", default-features = false }
prometheus         = "0.13"
prost              = "0.11"
reqwest            = { version = "0.11.20", default-features = false, features = ["rustls-tls-native-roots"] }
serde              = { version = "1.0.163", features = ["derive"] }
serde_json         = "1"
sqlx               = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "time"] }
subtle-encoding    = "0.5"
tendermint         = "0.32"
tendermint-proto   = "0.32"
tendermint-rpc     = { version = "0.32", features = ["websocket-client"] }
thiserror          = "1"
time               = "0.3"
tokio              = { version = "1", features = ["full"] }
toml               = "0.8.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
